[project]
name = "sqlalchemy-async"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.1",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.42",
]
